--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@ body{
     background: rgb(192, 196, 211);
 }
 
+.main-heading{
+    position: absolute;
+    top: 9%;
+    font-size: 2rem;
+    color: #EEEEEE;
+}
+
 .score-board{
     width: 35.9375rem;
     height: 24.0625rem;
