--- a/index.css
+++ b/index.css
@@ -65,3 +65,12 @@ button{
     width: 2.813rem;
     margin: 0.1rem;
 }
+
+p{
+    position: absolute;
+    bottom: 7%;
+}
+
+span{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
