--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgb(192, 196, 211);
 }
 
 .score-board{
@@ -28,10 +29,11 @@ h1{
     text-align: center;
     font-size: 2.5rem;
     width: 9.3125;
-    color: white;
+    color: #EEEEEE;
     height: 2.25rem;
     text-transform: uppercase;
     font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .score-div{
